--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.0",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.4.9",
     "vuex": "^3.5.1"
   },
