--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "better-scroll": "^1.13.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
+    "vant": "^2.11.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.0",
     "vue-lazyload": "^1.3.3",
